Add sample ejs render, and simple axios json merge

--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -10,8 +10,8 @@
 </head>
 <body>
 <div class="container">
-    <h1 class="header">Guitar Inventory</h1>
-    <a class="btn" href="/guitars"><i class="material-icons right">arrow_forward</i>Get started!</a>
+    <h1 class="header"><%= title %></h1>
+    <a class="btn" href="/hello"><i class="material-icons right">arrow_forward</i>Get started!</a>
 </div>
 </body>
 </html>
